# memforge

./: .dockerignore  .env.docker  .env.example  .gitignore  ADVERSARIAL-ASSESSMENT.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DREAMING_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT-SECURITY.md  DEVELOPMENT.md  Dockerfile  Dockerfile.standalone  HARDENING-PLAN.md  INTEGRATION.md  LICENSE  PHASE_5_PLAN.md  README.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md  THREAT_MODEL.md  demo.sh  docker-compose.yml  docker-entrypoint-standalone.sh  eslint.config.js  funding.js  funding.json  glama.json  package-lock.json  package.json  server.json  smithery.yaml  tsconfig.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: README.md  RESULTS.md
examples/: claude_tools.py  langchain_memory.py  openai_tools.py  quickstart.py  quickstart.ts  simple_chatbot.py
public/: ai-plugin.json
python/: README.md  pyproject.toml
python/memforge/: client.py  conversation.py  resilient.py  tools.py
python/python/memforge/: __init__.py  types.py
schema/: hnsw-indexes.example.sql  migration-v1.2.sql  migration-v1.3.sql  migration-v1.4.sql  migration-v1.6.sql  migration-v2.0.sql  migration-v2.1.sql  migration-v2.2.sql  migration-v2.3.sql  migration-v2.4.sql  migration-v2.5.sql  migration-v2.6.sql  migration-v2.7.sql  migration-v3.0.sql  migration-v3.1.sql  migration-v3.2.sql  migration-v3.3.sql  migration-v3.4.sql  migration-v3.5.sql  migration-v3.6.sql  migration-v3.7.sql  migration-v3.8.sql  migration-v3.9.sql  (+1 more)
(+81 files in other folders)
