[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memforge"
version = "0.1.0"
description = "Python SDK for MemForge — neuroscience-inspired agent memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SalishForge", email = "hello@salishforge.com" }]
keywords = ["ai", "agent", "memory", "llm", "rag", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-httpx"]

[project.urls]
Homepage = "https://github.com/salishforge/memforge"
Documentation = "https://github.com/salishforge/memforge/blob/main/INTEGRATION.md"
Repository = "https://github.com/salishforge/memforge"
Issues = "https://github.com/salishforge/memforge/issues"
